[package]
name = "peter"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "ANSI terminal colours and styles for anything implementing `Display`"
readme = "README.md"
repository = "https://github.com/rossmacarthur/peter"
license = "MIT OR Apache-2.0"
keywords = ["color", "style", "term", "ansi"]
categories = ["command-line-interface", "no-std"]

[dependencies]
ansi_term = "0.12"
